add-marks: добавление оценки